// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form checkbox component Should render correctly 1`] = `
<div
  className="field-group form-group"
>
  <div
    className=""
  >
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          id="name"
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="checkbox"
          value=""
        />
        foo
      </label>
    </div>
  </div>
</div>
`;

exports[`Final form checkbox component Should render with error message 1`] = `
<div
  className="field-group form-group has-error"
>
  <div
    className=""
  >
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          id="name"
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="checkbox"
          value=""
        />
        foo
      </label>
    </div>
  </div>
</div>
`;
